--- a/EShopSolution.BackendAPI/EShopSolution.BackendAPI.csproj
+++ b/EShopSolution.BackendAPI/EShopSolution.BackendAPI.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\EShopSolution.ViewModels\EShopSolution.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\user-content\" />
+  </ItemGroup>
+
 </Project>
