--- a/EShopSolution.AdminApp/EShopSolution.AdminApp.csproj
+++ b/EShopSolution.AdminApp/EShopSolution.AdminApp.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EShopSolution.BackendAPI\EShopSolution.BackendAPI.csproj" />
+    <ProjectReference Include="..\EShopSolution.ViewModels\EShopSolution.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
