--- a/EShopSolution.WebApp/EShopSolution.WebApp.csproj
+++ b/EShopSolution.WebApp/EShopSolution.WebApp.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="LazZiya.TagHelpers" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EShopSolution.ApiIntegration\EShopSolution.ApiIntegration.csproj" />
+  </ItemGroup>
+
 </Project>
